--- a/pages/jupiter.html
+++ b/pages/jupiter.html
@@ -11,7 +11,7 @@ link: jupiter
                         <p class="caption">Jupiter, seen by NASA's Hubble Space Telescope</p>
                     </div>
                     <p class="paragraph">
-                        Jupiter is the largest <a href="planet.html">planet</a> in the Solar System and fifth from the Sun.
+                        Jupiter is the largest <a href="planet.html">planet</a> in the Solar System and fifth from the <a href="sun.html">Sun</a>.
                         It is one of two gas giants, composed of hydrogen and helium, with trace amounts of methane, ammonia, ethane and water.
                         It is named after the king of gods and god of the sky in Roman mythology, analogous to Zeus in greek mythology. 
                     </p>
@@ -44,7 +44,7 @@ link: jupiter
                     </div>
                     <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                     <p class="paragraph">
-                        Jupiter orbits 5.2 AU away from the Sun, 4.95 AU during perihelion and 5.46 AU during aphelion.
+                        Jupiter orbits 5.2 AU away from the <a href="sun.html">Sun</a>, 4.95 AU during perihelion and 5.46 AU during aphelion.
                         It takes 11.86 Earth years to complete an orbit.
                         The orbital plane of Jupiter is inclined 1.30° compared to the ecliptic and has an eccentricity of 0.049.
                     </p>
@@ -208,7 +208,7 @@ link: jupiter
                         First to reach Jupiter was Pioneer 10, followed by Pioneer 11 one year later.
                         The two spacecrafts made the first close-up images of Jupiter.
                         Voyager 1 and 2 discovered Jupiter's rings, observed the Galilean moons and found a few moons.
-                        Ulysses, a solar probe, performed a flyby around Jupiter to attain a polar orbit around the Sun.
+                        Ulysses, a solar probe, performed a flyby around Jupiter to attain a polar orbit around the <a href="sun.html">Sun</a>.
                         The Cassini-Huygens passed Jupiter on it's way to the Saturn system.
                         The last to fly by Jupiter was New Horizons, a mission aimed at visiting Pluto.
                     </p>
