--- a/pages/mars.html
+++ b/pages/mars.html
@@ -11,7 +11,7 @@ link: mars
                         <p class="caption">Mars as seen by Rosetta</p>
                     </div>
                     <p class="paragraph">
-                        Mars is the fourth <a href="planet.html">planet</a> from the Sun and the second smallest in the Solar System.   
+                        Mars is the fourth <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> and the second smallest in the Solar System.   
                         Mars is named after the Roman god of war. 
                         It is also known as the Red Planet, the name originating from it's red surface.
                         The planet has a similar composition to that of <a href="earth.html">Earth</a>, but with a thinner atmosphere.
@@ -44,7 +44,7 @@ link: mars
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
                     Mars has an orbit with a semimajor axis of 1.524 AU and an eccentricity of 0.0934, second only to <a href="mercury.html">Mercury</a>. 
-                    The planet orbits the Sun in 687 days.
+                    The planet orbits the <a href="sun.html">Sun</a> in 687 days.
                     The perihelion is 1.3814 AU and the aphelion is 1.666 AU.
                 </p>
                 <p class="paragraph">
@@ -141,7 +141,7 @@ link: mars
                     Despite the high amounts of carbon dioxide, the thin atmosphere does not trap as much heat as on <a href="venus.html">Venus</a>.
                     The temperatures range from −110 °C to 35 °C.
                     Dust storms on Mars are the largest in the Solar System.
-                    They occur when Mars is close to the Sun.
+                    They occur when Mars is close to the <a href="sun.html">Sun</a>.
                 </p>
                 <div class="articlediv">
                     <h2 class="paragraphheader" id="Satellites">Satellites</h2>
