--- a/pages/mercury.html
+++ b/pages/mercury.html
@@ -11,7 +11,7 @@ link: mercury
                         <p class="caption">Mercury seen from MESSENGER</p>
                     </div>
                     <p class="paragraph">
-                        Mercury is the smallest and closest <a href="planet.html">planet</a> to the Sun in the Solar System. 
+                        Mercury is the smallest and closest <a href="planet.html">planet</a> to the <a href="sun.html">Sun</a> in the Solar System. 
                         Mercury is an inferior planet to <a href="earth.html">Earth</a> and similarly to <a href="venus.html">Venus</a>, it can only be seen as a morning or an evening "star" in the Earth sky.
                         It is named after the Roman god of commerce and the messenger of the gods. 
                     </p>
