--- a/pages/moon.html
+++ b/pages/moon.html
@@ -53,7 +53,7 @@ link: moon
                     <h3 class="paragraphsubheader" id="Phases">Phases</h3>
                     <p class="paragraph">
                         During the synodic orbital period, the moon completes a cycle of phases.
-                        Those phases are determined by the position of the Moon relative to the Sun and Earth.
+                        Those phases are determined by the position of the Moon relative to the <a href="sun.html">Sun</a> and Earth.
                         When the moon is between the Sun and Earth, a new moon appears.
                         It is invisible to the naked eye, except during solar eclipses.
                         New moon is followed by a waxing crescent, growing up to a half illuminated near side - first quarter.
@@ -113,7 +113,7 @@ link: moon
                     The Moon is known since ancient times.
                     It's regular phases were used for the making of many calendars.
                     The Moon was categorised as a planet until Galileo Galilei's discovery of the four natural <a href="natural-satellite.html">satellites</a> of <a href="jupiter.html">Jupiter</a>.
-                    He still was unsure what to call them, as they were the first object other than the Moon to orbit planets instead of the Sun.
+                    He still was unsure what to call them, as they were the first object other than the Moon to orbit planets instead of the <a href="sun.html">Sun</a>.
                     It took several years for the word satellite to be used.
                     Natural satellites are also called moons after the Moon.
                     Galileo made observations of the Moon with his telescope and discovered landforms on its surface.
