--- a/pages/planet.html
+++ b/pages/planet.html
@@ -10,7 +10,7 @@ link: planet
                    According to the IAU, a planet is a celestial body that:
                 </p>
                 <ol class="paragraph">
-                    <li>is in orbit around the Sun,</li>
+                    <li>is in orbit around the <a href="sun.html">Sun</a>,</li>
                     <li>has sufficient mass so it assumes hydrostatic equilibrium (to be nearly round) and</li>
                     <li>has cleared the neighborhood around it's orbit.</li>
                 </ol>
@@ -62,7 +62,7 @@ link: planet
                     <h3 class="paragraphsubheader" id="Mercury">Mercury</h3>
                     <p class="readmore">Main article: <a href="mercury.html">Mercury</a></p>
                     <p class="paragraph">
-                        Mercury is the smallest and closest to the Sun of the eight planets. 
+                        Mercury is the smallest and closest to the <a href="sun.html">Sun</a> of the eight planets. 
                         It is named after the Roman god of commerce and the messenger of the gods. 
                         The planet's surface is covered with craters and is too hot for an athmosphere to form. 
                         There are also evidence of ice water at the poles.
@@ -199,7 +199,7 @@ link: planet
                 <h2 class="paragraphheader" id="Exoplanets">Exoplanets</h2>
                 <p class="readmore">Main article: <a href="exoplanet.html">Exoplanet</a></p>
                 <p class="paragraph">
-                    Exoplanets are planets orbiting <a href="star.html">stars</a> different from the Sun. 
+                    Exoplanets are planets orbiting <a href="star.html">stars</a> different from the <a href="sun.html">Sun</a>. 
                     There are more than 5,000 known exoplanets.
                 </p>
                 <p class="paragraph">
