--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -11,7 +11,7 @@ link: saturn
                         <p class="caption">Saturn, seen by the Cassini orbiter</p>
                     </div>
                     <p class="paragraph">
-                        Saturn is the sixth from the Sun and second largest of the eight <a href="planet.html">planets</a> in the Solar System. 
+                        Saturn is the sixth from the <a href="sun.html">Sun</a> and second largest of the eight <a href="planet.html">planets</a> in the Solar System. 
                         It is a gas giant like <a href="jupiter.html">Jupiter</a> composed mostly of hydrogen and helium.
                         In Roman mythology, Saturn is the god of time and wealth. 
                     </p>
@@ -39,7 +39,7 @@ link: saturn
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
-                    The average distance from the Sun is 9 AU.
+                    The average distance from the <a href="sun.html">Sun</a> is 9 AU.
                     The perihelion and aphelion distances are, respectively, 9.195 and 9.957 AU
                     It takes Saturn 10,759 Earth days to finish one revolution around the Sun.
                 </p>
