--- a/pages/star.html
+++ b/pages/star.html
@@ -8,11 +8,11 @@ link: star
                 <div class="articlediv">
                     <div class="captionbox right" style="width:242px">
                         <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
-                        <p class="caption">The Sun, a G-type star</p>
+                        <p class="caption">The<a href="sun.html">Sun</a>, a G-type star</p>
                     </div>
                     <p class="paragraph">
                         A star is a celestial body that consists of plasma held by it's gravity and emits light. 
-                        The Sun is the closest star to <a href="earth.html">Earth</a>. 
+                        The <a href="sun.html">Sun</a> is the closest star to <a href="earth.html">Earth</a>. 
                         There are an estimated 10^22 to 10^24 stars in the universe, but only around 4,000 can be seen with the naked eye.
                     </p>
                     <p class="paragraph">
@@ -45,7 +45,7 @@ link: star
                             <th>F</th><th>6,000-7,500 K</th><th>1.04-1.4 M☉</th><th>1.15-1.4 R☉</th><th>1.5-5 L☉</th><th>3%</th><th>Procyon A</th>
                         </tr>
                         <tr>
-                            <th>G</th><th>5,200-6,000 K</th><th>0.8-1.04 M☉</th><th>0.96-1.15 R☉</th><th>0.6-1.5 L☉</th><th>7.6%</th><th>Sun</th>
+                            <th>G</th><th>5,200-6,000 K</th><th>0.8-1.04 M☉</th><th>0.96-1.15 R☉</th><th>0.6-1.5 L☉</th><th>7.6%</th><th><a href="sun.html">Sun</a></th>
                         </tr>
                         <tr>
                             <th>K</th><th>3,700-5,200 K</th><th>0.45-0.8 M☉</th><th>0.7-0.96 R☉</th><th>0.08-0.6 L☉</th><th>12.1%</th><th>Epsilon Indi</th>
