--- a/pages/tno.html
+++ b/pages/tno.html
@@ -6,7 +6,7 @@ link: tno
 ---
 
                 <p class="paragraph">
-                    A trans-Neptunian object (TNO) is a minor planet with an average distance from the Sun greater than that of <a href="neptune.html">Neptune</a>. 
+                    A trans-Neptunian object (TNO) is a minor planet with an average distance from the <a href="sun.html">Sun</a> greater than that of <a href="neptune.html">Neptune</a>. 
                     Trans-Neptunian objests are further divided into Kuiper belt objects, scattered disc objects and extreme trans-Neptunian objects. 
                     There are more than 2,000 TNOs, almost 700 of which are named.
                 </p>
@@ -31,7 +31,7 @@ link: tno
                 <div class="articlediv">
                     <h3 class="paragraphsubheader" id="KuiperBeltObjects">Kuiper belt objects</h3>
                     <p class="paragraph">
-                        The Kuiper belt contains objects with an average distance to the Sun of 30-55 AU and a small inclination from the ecliptic. 
+                        The Kuiper belt contains objects with an average distance to the <a href="sun.html">Sun</a> of 30-55 AU and a small inclination from the ecliptic. 
                         Such objecs are further divided into classical (cubewanos) and resonant. 
                         The latter ones are locked in a orbital resonance with <a href="neptune.html">Neptune</a>.
                     </p>
