--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -11,7 +11,7 @@ link: uranus
                         <p class="caption">Uranus, Voyager 2</p>
                     </div>
                     <p class="paragraph">
-                        Uranus is the seventh <a href="planet.html">planet</a> from the Sun. 
+                        Uranus is the seventh <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a>. 
                         It is also the third biggest planet in the Solar System. 
                         It is named after the Greek god, who represents the sky. 
                     </p>
@@ -58,7 +58,7 @@ link: uranus
                         The reason is unknown, but it is suggested that a protoplanet collided with Uranus, causing it's almost parallel to the ecliptic.
                     </p>
                     <p class="paragraph">
-                        Uranus is 20 AU away from the Sun on average, with a perihelion of 18.3 AU and an aphelion of 20.1 AU from the Sun.
+                        Uranus is 20 AU away from the <a href="sun.html">Sun</a> on average, with a perihelion of 18.3 AU and an aphelion of 20.1 AU from the Sun.
                         The eccentricity is 0.047.
                         Early observations of Uranus lead to the discovery of a planet that influenced the Uranian orbit - <a href="neptune.html">Neptune</a>.
                     </p>
