--- a/pages/venus.html
+++ b/pages/venus.html
@@ -11,7 +11,7 @@ link: venus
                         <p class="caption">Venus, seen by Mariner 10</p>
                     </div>
                     <p class="paragraph">
-                        Venus is the second <a href="planet.html">planet</a> from the Sun in the Solar System.
+                        Venus is the second <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> in the Solar System.
                         It is slightly smaller than <a href="earth.html">Earth</a> and is often called a "sister" planet of Earth.
                         It is the brightest of the planets on the Earth sky, caused by the proximity to the Earth and the high albedo of the atmosphere and clouds. 
                         Venus is named after the Roman goddes of love and beauty. 
@@ -52,7 +52,7 @@ link: venus
                 </div>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
-                    Venus orbits the Sun at an average distance of 0.72 AU and completes an orbit every 224.7 days.
+                    Venus orbits the <a href="sun.html">Sun</a> at an average distance of 0.72 AU and completes an orbit every 224.7 days.
                     The eccentricity of the orbit is 0.01, the closest to a circle of all the planets.
                 </p>
                 <p class="paragraph">
@@ -136,7 +136,7 @@ link: venus
                     </div>
                     <p class="paragraph">
                         Galileo Galilei observed the planet through a telescope.
-                        He noticed that Venus was showing phases similar to the <a href="moon.html">Moon</a>, which would prove it's proximity to the Sun.
+                        He noticed that Venus was showing phases similar to the <a href="moon.html">Moon</a>, which would prove it's proximity to the <a href="sun.html">Sun</a>.
                         The atmosphere was discovered by Mikhail Lomonosov.
                         It was later studied by astronomers Johann Schröter and Chester Smith Lyman, who noticed the crescent shape of Venus to extend and a complete ring forming at inferion conjunction.
                         This is a result of the scattered sunlight in the atmosphere.
