--- a/pages/neptune.html
+++ b/pages/neptune.html
@@ -11,7 +11,7 @@ link: neptune
                         <p class="caption">Neptune as seen by Voyager 2, 1989</p>
                     </div>
                     <p class="paragraph">
-                        Neptune is the eight <a href="planet.html">planet</a> from the Sun in the Solar System. 
+                        Neptune is the eight <a href="planet.html">planet</a> from the <a href="sun.html">Sun</a> in the Solar System. 
                         It is the fourth biggest planet in the Solar System, and one of two ice giants, the other being <a href="uranus.html">Uranus</a>.
                         Neptune orbits the Sun once every 164.8 years at an average distance of 30.1 AU from it.
                         It is named after the Roman sea god, the equivalent of the Greek Poseidon. 
@@ -59,7 +59,7 @@ link: neptune
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
-                    Neptune is the farthest planet from the Sun at 30.1 AU.
+                    Neptune is the farthest planet from the <a href="sun.html">Sun</a> at 30.1 AU.
                     It takes Neptune an average of 164.79 years to complete an orbit.
                     The perihelion distance is 29.81 AU and the aphelion distance is 30.33 AU.
                     The elliptical orbit of Neptune is inclined 1.77° in relation to that of Earth. 
@@ -115,7 +115,7 @@ link: neptune
                         Winds on Neptune are very dynamic and can reach supersonic speed.
                         More precicely, wind speeds vary between 20 m/s in the easterly direction to 325 m/s westward, with high altitude clouds exceeding 400 m/s.
                         The long orbital period of Neptune causes seasons to last for years.
-                        This leads to effects like higher temperatures at one the poles that is facing the Sun.
+                        This leads to effects like higher temperatures at one the poles that is facing the <a href="sun.html">Sun</a>.
                     </p>
                     <p class="paragraph">
                         First seen during the Voyager 2 flyby, The Great Dark Spot was a storm similar to Jupiter's Great Red Spot.
